[package]
name = "oxylabs-vrbo-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.8"
dotenv = "0.15"
futures = "0.3"
indicatif = "0.17"
serde_json = "1.0"
